@@ -4,12 +4,12 @@
 # make sure we're interpreted by some minimal autoconf
 AC_PREREQ([2.69])
 
-AC_INIT([gperftools],[2.17.1],[gperftools@googlegroups.com])
+AC_INIT([gperftools],[2.17.2],[gperftools@googlegroups.com])
 # Update this value for every release!  (A:B:C will map to foo.so.(A-C).C.B)
 # http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
-TCMALLOC_SO_VERSION=10:2:6
-PROFILER_SO_VERSION=5:16:5
-TCMALLOC_AND_PROFILER_SO_VERSION=11:2:7
+TCMALLOC_SO_VERSION=10:3:6
+PROFILER_SO_VERSION=5:17:5
+TCMALLOC_AND_PROFILER_SO_VERSION=11:3:7
 
 AC_SUBST(TCMALLOC_SO_VERSION)
 AC_SUBST(PROFILER_SO_VERSION)
